tests/parse_print/issues/425/1/stderr.expected
Error:
    tests/parse_print/issues/425/1/425.essence:1:15:
unexpected :
expecting expression
    letting s be {:}
                  ^